--- a/templates/actor/actor-main.html
+++ b/templates/actor/actor-main.html
@@ -22,7 +22,7 @@
   <div class="stat-row">
     <span class="stat-header">Mod</span>
     {{#each actor.data.stats as |stat s|}}
-    <span class="stat-item"><input class="stat-input" name="data.stats.{{s}}.modifiers" value="{{stat.modifiers}}"
+    <span class="stat-item"><input class="stat-input" name="data.stats.{{s}}.modifier" value="{{stat.modifier}}"
         data-dtype="Number" /></span>
     {{/each}}
   </div>
@@ -34,29 +34,67 @@
   </div>
 </div>
 <div class="skills-table">
-  <ol class="items-list">
-                <li class="item flexrow item-header">
-                  <div class="item-name">Name</div>
-                  <div class="item-stat">Stat</div>
-                  <div class="item-improv">Improv.</div>
-                  <div class="item-total">Total</div>
-                  <div class="item-controls">
-                    <a class="item-control item-create" title="Create Skill" data-type="item"><i class="fas fa-plus"></i></a>
-                  </div>
-                </li>
-            {{#each actor.basicSkills as |skill s|}}
-                <li class="item flexrow" data-item-id="{{skill._id}}">
-                    <!-- <div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></div> -->
-                    <h4 class="item-name">{{skill.name}}</h4>
-                    <span>{{localize skill.data.stat.abrev}}: {{skill.data.stat.num}} + </span>
-                    <input data-item-id="{{skill._id}}" class="skill-input" value="{{skill.data.improvements.value}}"
-                    data-dtype="Number"  />
-                    <span class="skill-item rollable" data-roll="{{skill.data.total.value}}">{{skill.data.total.value}}</span>
-                    <div class="item-controls">
-                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                    </div>
-                </li>
-            {{/each}}
-            </ol>
+  <ol class="subsection">
+    <div class="title">Basic Skills</div>
+    <li class="header">
+      <div class="item">Name</div>
+      <div class="item">Stat</div>
+      <div class="item">Imp.</div>
+      <div class="item">Total</div>
+      <div class="item">
+        <a class="item-control item-create" title="Create Skill" data-type="item"><i class="fas fa-plus"></i></a>
+      </div>
+    </li>
+    {{#each actor.basicSkills as |skill s|}}
+    <li class="list" data-item-id="{{skill._id}}">
+      <h4 class="item">{{skill.name}}</h4>
+      <span class="item stat">
+        <span>{{localize skill.data.stat.abrev}}</span>
+        <span>{{skill.data.stat.num}}</span>
+      </span>
+      <span class="item input">
+        <input data-item-id="{{skill._id}}" class="box" value="{{skill.data.improvements.value}}" data-dtype="Number" />
+      </span>
+
+      <span class="item rollable" data-roll="{{skill.data.total.value}}">{{skill.data.total.value}}</span>
+      <div class="item control">
+        <!-- <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a> -->
+        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+      </div>
+    </li>
+    {{/each}}
+  </ol>
+  <ol class="subsection">
+    <div class="title">Advanced Skills</div>
+    <li class="header">
+      <div class="item">Name</div>
+      <div class="item">Stat</div>
+      <div class="item">Imp.</div>
+      <div class="item">Total</div>
+      <div class="item">
+        <a class="item-control item-create" title="Create Skill" data-type="item"><i class="fas fa-plus"></i></a>
+      </div>
+    </li>
+    {{#each actor.advancedOrGroupedSkills as |skill s|}}
+    <li class="list" data-item-id="{{skill._id}}">
+      <div class="container">
+        <h4 class="item">{{skill.name}}</h4>
+        <span class="item stat">
+          <span>{{localize skill.data.stat.abrev}}</span>
+          <span>{{skill.data.stat.num}}</span>
+        </span>
+        <span class="item input">
+          <input data-item-id="{{skill._id}}" class="box" value="{{skill.data.improvements.value}}"
+            data-dtype="Number" />
+        </span>
+
+        <span class="item rollable" data-roll="{{skill.data.total.value}}">{{skill.data.total.value}}</span>
+        <div class="item control">
+          <!-- <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a> -->
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </div>
+    </li>
+    {{/each}}
+  </ol>
 </div>
