--- a/css/taa.css
+++ b/css/taa.css
@@ -13,8 +13,15 @@
   font-family: "Goudament";
 }
 
+.app.window-app.taa.sheet.actor {
+	min-width: 576px;
+	min-height: 643px;
+}
+
 .app.window-app.taa.sheet.actor .window-content{
-  background-image: url(../ui/actorsheet/actorbackground.png);
+	background-image: url(../ui/actorsheet/actorbackground.png);
+	/* min-width: 576px;
+	min-height: 612px; */
 }
 
 .app.window-app.taa.sheet.actor .window-header.flexrow.draggable.resizable {
@@ -23,35 +30,52 @@
 
 
 /*-----Skill Tables------*/
+.skills-title{
+	display: flex;
+    font-family: TypographerRotunda;
+    font-size: 16px;
+    border: 1px solid #736953a6;
+    box-shadow: 0 0 8px 2px #8c272752 inset;
+}
+.skills-title .section {
+	margin: auto;
+	width: 100%;
+	border: 1px solid #736953a6;
+	border-bottom: none;
+	border-top: none;
+	border-left: none;
+}
+
 .skills-table{
 	width: 100%;
 	display: flex;
 }
 
-.skills-table .subsection{
+.skills-table .container{
+	overflow: auto;
+	display: block;
+	height: 260px;
 	width: 50%;
-	display: table;
+}
+
+.skills-table .container .subsection{
 	padding: 0;
 	border: 1px solid #736953a6;
+	display: table;
+	width: 100%;
+	border-top: none;
+	margin: 0;
 }
 
-.skills-table .subsection .title{
-	display: table-caption;
-    font-family: TypographerRotunda;
-    text-align: center;
-    margin: auto;
-    font-size: 16px;
-    border: 1px solid #736953a6;
-    box-shadow: 0 0 8px 2px #8c272752 inset;
-}
 
-.skills-table .subsection .header{
+
+.skills-table .container .subsection .header{
 	display: table-row;
 	box-shadow: 0 0 8px 2px #3e060652 inset;
 }
 
 
-.skills-table .subsection .header .item{
+.skills-table .container .subsection .header .item{
 	display: table-cell;
 	font-family: TypographerRotunda;
 	padding-left: 5px;
@@ -59,11 +83,11 @@
     text-align: center;
 }
 
-.skills-table .subsection .list{
+.skills-table .container .subsection .list{
 	display: table-row;
 }
 
-.skills-table .subsection .list .item{
+.skills-table .container .subsection .list .item{
 	display: table-cell;
 	border: 1px solid #736953a6;
     border-left: none;
@@ -78,20 +102,20 @@
 	box-shadow: 0 0 4px 0px #00000075 inset;
 }
 
-.skills-table .subsection .list .item.stat{
+.skills-table .container .subsection .list .item.stat{
 	width: 50px;
 }
 
-.skills-table .subsection .list .item.input{
+.skills-table .container .subsection .list .item.input{
 	width: 30px;
 }
-.skills-table .subsection .list .item.input .box{
+.skills-table .container .subsection .list .item.input .box{
 	width: inherit;
 	text-align: inherit;
 	font-family: Goudament;
 	font-size: 16px;
 }
-.skills-table .subsection .list .item.control{
+.skills-table .container .subsection .list .item.control{
 	font-size: 10px;
 }
 
