--- a/templates/actor/actor-main.html
+++ b/templates/actor/actor-main.html
@@ -33,51 +33,24 @@
     {{/each}}
   </div>
 </div>
+<div class="skills-title">
+  <div class="section">Basic Skills</div>
+  <div class="section">Advanced Skills</div>
+</div>
 <div class="skills-table">
-  <ol class="subsection">
-    <div class="title">Basic Skills</div>
-    <li class="header">
-      <div class="item">Name</div>
-      <div class="item">Stat</div>
-      <div class="item">Imp.</div>
-      <div class="item">Total</div>
-      <div class="item">
-        <a class="item-control item-create" title="Create Skill" data-type="item"><i class="fas fa-plus"></i></a>
-      </div>
-    </li>
-    {{#each actor.basicSkills as |skill s|}}
-    <li class="list" data-item-id="{{skill._id}}">
-      <h4 class="item">{{skill.name}}</h4>
-      <span class="item stat">
-        <span>{{localize skill.data.stat.abrev}}</span>
-        <span>{{skill.data.stat.num}}</span>
-      </span>
-      <span class="item input">
-        <input data-item-id="{{skill._id}}" class="box" value="{{skill.data.improvements.value}}" data-dtype="Number" />
-      </span>
-
-      <span class="item rollable" data-roll="{{skill.data.total.value}}">{{skill.data.total.value}}</span>
-      <div class="item control">
-        <!-- <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a> -->
-        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-      </div>
-    </li>
-    {{/each}}
-  </ol>
-  <ol class="subsection">
-    <div class="title">Advanced Skills</div>
-    <li class="header">
-      <div class="item">Name</div>
-      <div class="item">Stat</div>
-      <div class="item">Imp.</div>
-      <div class="item">Total</div>
-      <div class="item">
-        <a class="item-control item-create" title="Create Skill" data-type="item"><i class="fas fa-plus"></i></a>
-      </div>
-    </li>
-    {{#each actor.advancedOrGroupedSkills as |skill s|}}
-    <li class="list" data-item-id="{{skill._id}}">
-      <div class="container">
+  <div class="container">
+    <ol class="subsection">
+      <li class="header">
+        <div class="item">Name</div>
+        <div class="item">Stat</div>
+        <div class="item">Imp.</div>
+        <div class="item">Total</div>
+        <div class="item">
+          <a class="item-control item-create" title="Create Skill" data-type="item"><i class="fas fa-plus"></i></a>
+        </div>
+      </li>
+      {{#each actor.basicSkills as |skill s|}}
+      <li class="list" data-item-id="{{skill._id}}">
         <h4 class="item">{{skill.name}}</h4>
         <span class="item stat">
           <span>{{localize skill.data.stat.abrev}}</span>
@@ -93,8 +66,44 @@
           <!-- <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a> -->
           <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
         </div>
-      </div>
-    </li>
-    {{/each}}
-  </ol>
+      </li>
+      {{/each}}
+    </ol>
+  </div>
+  
+  <div class="container">
+    
+    <ol class="subsection">
+      <li class="header">
+        <div class="item">Name</div>
+        <div class="item">Stat</div>
+        <div class="item">Imp.</div>
+        <div class="item">Total</div>
+        <div class="item">
+          <a class="item-control item-create" title="Create Skill" data-type="item"><i class="fas fa-plus"></i></a>
+        </div>
+      </li>
+      {{#each actor.advancedOrGroupedSkills as |skill s|}}
+      <li class="list" data-item-id="{{skill._id}}">
+        <div class="container">
+          <h4 class="item">{{skill.name}}</h4>
+          <span class="item stat">
+            <span>{{localize skill.data.stat.abrev}}</span>
+            <span>{{skill.data.stat.num}}</span>
+          </span>
+          <span class="item input">
+            <input data-item-id="{{skill._id}}" class="box" value="{{skill.data.improvements.value}}"
+              data-dtype="Number" />
+          </span>
+
+          <span class="item rollable" data-roll="{{skill.data.total.value}}">{{skill.data.total.value}}</span>
+          <div class="item control">
+            <!-- <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a> -->
+            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+          </div>
+        </div>
+      </li>
+      {{/each}}
+    </ol>
+  </div>
 </div>
